# rice_price_predict

./: .gitignore  README.md  docker-compose-grafana.yml  docker-compose-loki-promtail.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  loki-config.yaml  promtail-config.yaml
.github/workflows/: CD_compose.yml  CD_workflow.yml  add_grafana.yml  add_loki_promtail.yml  build_push.yml  deploy.yml  hello.yml  rollback.yml
backend/: .dockerignore  README.md  dockerfile  main.py  pyproject.toml  run_mlflow.sh
backend/artifacts/model/model_prod/: MLmodel  conda.yaml  model.pkl  python_env.yaml
backend/artifacts/transformation/box_cox/: box_cox.joblib
backend/config/: data_config.yaml  train_config.yaml
backend/explorations/: data_preparing.ipynb  eda&feat_candidates.ipynb  eda&feat_select.ipynb  experiments.ipynb  features_select.ipynb
backend/src/api/: JsonFormatter.py  main.py
backend/src/core/inference/: RicePricePredictor.py  WrappedException.py  postprocessing.py  preprocessing.py  schemas.py
backend/src/core/pipeline/: cleaning.py  feat_eng.py  ingestion.py  training.py
backend/src/core/utils/: TerminalSpinner.py  helpers.py
backend/tests/unit/core/inference/: test_inference.py  test_postprocessing.py  test_preprocessing.py  test_schemas.py
backend/tests/unit/core/pipeline/: test_cleaning.py  test_feat_eng.py  test_ingestion.py  test_training.py
backend/tests/unit/core/utils/: test_helpers.py
frontend/: .dockerignore  .gitignore  README.md  dockerfile  env.d.ts  nginx.conf  package.json
frontend/src/: main.ts
(+29 files in other folders)
