[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "pydantic-settings>=2.13.1",
    "numpy>=2.4.2",
    "pandas<3.0.0",
    "scikit-learn>=1.8.0",
    "setuptools==81.0.0",
]

[dependency-groups]
dev = [
    "boto3>=1.42.75",
    "dotenv>=0.9.9",
    "geopy>=2.4.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.0.0",
    "notebook>=7.5.4",
    "openpyxl>=3.1.5",
    "protobuf<5.0.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "seaborn>=0.13.2",
    "sqlalchemy<2.0.0",
    "yfinance>=1.2.0",
]
